# packages/nova_sdk_py_file/src/nova_sdk_py_file/models/enqueue_job_request.py
@@ -2,7 +2,7 @@
 from __future__ import annotations
 
 from collections.abc import Mapping
-from typing import TYPE_CHECKING, Any, TypeVar, cast
+from typing import TYPE_CHECKING, Any, TypeVar
 
 from attrs import define as _attrs_define
 
@@ -22,12 +22,10 @@ class EnqueueJobRequest:
     Attributes:
         job_type (str):
         payload (EnqueueJobRequestPayload | Unset):
-        session_id (None | str | Unset):
     """
 
     job_type: str
     payload: EnqueueJobRequestPayload | Unset = UNSET
-    session_id: None | str | Unset = UNSET
 
     def to_dict(self) -> dict[str, Any]:
         job_type = self.job_type
@@ -35,12 +33,6 @@ class EnqueueJobRequest:
         payload: dict[str, Any] | Unset = UNSET
         if not isinstance(self.payload, Unset):
             payload = self.payload.to_dict()
-
-        session_id: None | str | Unset
-        if isinstance(self.session_id, Unset):
-            session_id = UNSET
-        else:
-            session_id = self.session_id
 
         field_dict: dict[str, Any] = {}
 
@@ -51,8 +43,6 @@ class EnqueueJobRequest:
         )
         if payload is not UNSET:
             field_dict["payload"] = payload
-        if session_id is not UNSET:
-            field_dict["session_id"] = session_id
 
         return field_dict
 
@@ -72,19 +62,9 @@ class EnqueueJobRequest:
         else:
             payload = EnqueueJobRequestPayload.from_dict(_payload)
 
-        def _parse_session_id(data: object) -> None | str | Unset:
-            if data is None:
-                return data
-            if isinstance(data, Unset):
-                return data
-            return cast(None | str | Unset, data)
-
-        session_id = _parse_session_id(d.pop("session_id", UNSET))
-
         enqueue_job_request = cls(
             job_type=job_type,
             payload=payload,
-            session_id=session_id,
         )
 
         return enqueue_job_request
